[gd_scene load_steps=4 format=2]

[ext_resource path="res://Data/Sprites/turret1.png" type="Texture" id=1]
[ext_resource path="res://Characters/Turrets/Turret.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Turret" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="FirePoint" type="Position2D" parent="."]
position = Vector2( -7.24792e-005, -20 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -20 )
collision_mask = 4

[node name="LaserDuration" type="Timer" parent="."]
one_shot = true

[node name="LaserCooldown" type="Timer" parent="."]

[node name="BulletCooldown" type="Timer" parent="."]

[node name="AutotargetRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutotargetRange"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="LaserDuration" to="." method="_on_LaserDuration_timeout"]
[connection signal="timeout" from="LaserCooldown" to="." method="_on_LaserCooldown_timeout"]
[connection signal="timeout" from="BulletCooldown" to="." method="_on_BulletCooldown_timeout"]
[connection signal="body_entered" from="AutotargetRange" to="." method="_on_AutotargetRange_body_entered"]
[connection signal="body_exited" from="AutotargetRange" to="." method="_on_AutotargetRange_body_exited"]
